--- a/README.Rmd
+++ b/README.Rmd
@@ -30,3 +30,8 @@ devtools::install_github("ykunisato/openPsychData")
 ```
 ## How to use
 
+``` 
+library(openPsychData)
+load_ospp("16PF", codebook = TRUE)
+```
+
